# omics-target-prioritization

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  STATUS.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  biology.md  index.md  methods.md
docs/adrs/: 0001-colocalization-v2g.md  0002-harmonic-sum-aggregation.md  0003-provenance-and-confidence.md
examples/: trio_end_to_end.py
src/omics_target_prioritization/: __init__.py  cli.py  coloc.py  models.py  simulate.py
src/omics_target_prioritization/evidence/: __init__.py  aggregate.py  confidence.py  mr_evidence.py
src/omics_target_prioritization/integrate/: __init__.py  v2g.py
src/omics_target_prioritization/report/: __init__.py  dossier.py
src/omics_target_prioritization/report/templates/: dossier.html.j2
src/omics_target_prioritization/score/: __init__.py  prioritize.py
tests/: conftest.py  test_aggregate.py  test_cli.py  test_coloc.py  test_confidence.py  test_integration.py  test_models.py  test_mr_evidence.py  test_v2g_and_prioritize.py
