[project]
name = "omics-target-prioritization"
version = "0.1.0"
description = "Integrate GWAS signals with multi-omics QTLs via colocalization-based variant-to-gene mapping into a calibrated, provenance-tracked target-prioritization score."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Armin Bayati", email = "a.bayati.brain@gmail.com" }]
keywords = [
    "bioinformatics",
    "statistical-genetics",
    "gwas",
    "colocalization",
    "qtl",
    "target-prioritization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "pyarrow>=16",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "loguru>=0.7",
    "jinja2>=3.1",
]

[project.scripts]
omics-target-prioritization = "omics_target_prioritization.cli:app"

[project.urls]
Homepage = "https://github.com/abayatibrain/omics-target-prioritization"
Documentation = "https://abayatibrain.github.io/omics-target-prioritization/"
Issues = "https://github.com/abayatibrain/omics-target-prioritization/issues"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6.9",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omics_target_prioritization"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true
files = ["src"]

# Scientific-Python libraries that ship without PEP-561 type stubs.
[[tool.mypy.overrides]]
module = [
    "scipy",
    "scipy.*",
    "statsmodels",
    "statsmodels.*",
    "pandas",
    "pandas.*",
    "jinja2",
    "jinja2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
